--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="A new Social Media 2022" />
-    <title className="title">Angels Social || 2022</title>
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <style>
       * {
-        font-family: "Roboto", sans-serif;
+        font-family: "Open Sans", sans-serif;
         margin: 0;
       }
     </style>
+    <title>Angels Booking</title>
   </head>
-
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="app"></div>
+    <div id="root"></div>
   </body>
 </html>
